# optuna-lightning-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  docs.yml
.github/workflows/: ci.yml  docs.yml  publish-testpypi.yml  publish.yml
docs/: api.md  index.md  usage.md
examples/: mnist-optuna.yaml  mnist-training.yaml  optuna.yaml  training.yaml
src/optuna_lightning_cli/: __init__.py  cli.py  config.py  instantiate.py  mlflow.py  objective.py  studies.py  validation.py
src/optuna_lightning_cli/examples/: __init__.py  mnist.py
tests/: test_cli.py  test_config.py  test_mlflow.py  test_objective.py  tiny_lightning.py
