[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optuna-lightning-cli"
version = "0.1.0"
description = "A Typer CLI application for tuning Lightning modules with Optuna."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.10"
dependencies = [
    "jsonargparse[signatures]>=4.27",
    "lightning>=2.0",
    "optuna>=3.0",
    "optuna-integration[pytorch_lightning]>=4.0",
    "rich>=13.0",
    "torch>=2.0",
    "typer>=0.12"
]

[project.urls]
Documentation = "https://lukecpadmore.github.io/optuna-lightning-cli/"
Repository = "https://github.com/LukeCPadmore/optuna-lightning-cli"
Issues = "https://github.com/LukeCPadmore/optuna-lightning-cli/issues"
Changelog = "https://github.com/LukeCPadmore/optuna-lightning-cli/blob/main/CHANGELOG.md"

[project.optional-dependencies]
examples = [
    "torchvision>=0.15",
]

ci = [
    "ruff>=0.12.0",
    "twine>=6.0",
]

test = [
    "pytest>=8.0",
]

dev = [
    "types-pyyaml>=6.0.12.20260518",
    "pre-commit>=4.6.0",
    "mlflow",
    "ruff>=0.12.0"
]

docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[project.scripts]
optuna-lightning = "optuna_lightning_cli.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
